src/test/resources/semantic_errors/funcall_wrong_number_of_args1.notc
void fun(int a, int b, int c, int d) {
}

void main() {
    fun(1, 2, 3, 4, 5);
}
